// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`find toJSON get concatnated text 1`] = `
<div
  id={
    [
      "root",
    ]
  }
>
  
          
  <h1>
    Snapshot
  </h1>
  
          
  <ul>
    
          
    <li
      class={
        [
          "active",
        ]
      }
    >
      Apple
    </li>
    
          
    <li>
      <a
        href={
          [
            "#",
          ]
        }
      >
        Orange
      </a>
    </li>
    
          
  </ul>
  
        
</div>
`;

exports[`find toJSON output as array if multiple 1`] = `
[
  <li
    class={
      [
        "active",
      ]
    }
  >
    Apple
  </li>,
  <li>
    <a
      href={
        [
          "#",
        ]
      }
    >
      Orange
    </a>
  </li>,
]
`;
